--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@
                 </div>
             </div>
         </div>
+        <div class="section-three">
+            <div class="body">
+                <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="speaker">-Thor, God of Thunder</div>
+            </div>
+        </div>
+        <div class="section-four">
+            <div class="body">
+                <div class="left-text">
+                    <div class="header">Call to action! It's time!</div>
+                    <div class="text">Sign up for our product by clicking that button over there!</div>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="text">Copyright © The Odin Project 2024</div>
+        </div>
     </div>
 </body>
 </html>
